// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid Custom Class Names and Styling 1`] = `
<div
  class="Grid-grid-0 Grid-gridVSpace1-0 customClassName"
  style="width: 60%; background-color: purple;"
>
  <div
    class="Grid-gridSpan-0 Grid-gridSpan3-0"
  >
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
  </div>
</div>
`;

exports[`Grid Grid Position Center 1`] = `
<div
  class="Grid-grid-0 Grid-gridHSpace1-0 Grid-gridVSpace1-0 Grid-gridPositionCenter-0"
>
  <div
    class="Grid-gridSpan-0 Grid-gridSpan3-0"
  >
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
  </div>
</div>
`;

exports[`Grid Grid Position Right 1`] = `
<div
  class="Grid-grid-0 Grid-gridHSpace1-0 Grid-gridVSpace1-0 Grid-gridPositionRight-0"
>
  <div
    class="Grid-gridSpan-0 Grid-gridSpan3-0"
  >
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
  </div>
</div>
`;

exports[`Grid Renders Children 1`] = `
<div
  class="Grid-grid-0 Grid-gridHSpace1-0 Grid-gridVSpace1-0"
>
  <div
    class="Grid-gridSpan-0 Grid-gridSpan3-0"
  >
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
  </div>
</div>
`;

exports[`Grid Renders Children with custom layout data 1`] = `
<div
  class="Grid-grid-0 Grid-gridHSpace1-0 Grid-gridVSpace1-0"
>
  <div
    class="Grid-gridSpan-0 Grid-gridSpan12-0"
  >
    <div
      data-layout="[object Object]"
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
  </div>
  <div
    class="Grid-gridSpan-0 Grid-gridSpan3-0 Grid-gridIndent1-0"
  >
    <div
      data-layout="[object Object]"
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
  </div>
</div>
`;
